// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconCheck renders empty icon check 1`] = `
<div
  class="relative h-16 w-16 cursor-pointer"
>
   
  <span
    class="fa absolute right-0 bottom-0 bg-white shadow-md px-1 py-1 fa-question text-grey-l2"
  />
</div>
`;

exports[`IconCheck renders icon checker 1`] = `
<div
  class="relative w-10 h-10 cursor-pointer"
>
  <svg-icon
    class="w-full h-full"
    name="inventory/30"
  />
   
  <span
    class="fa absolute right-0 bottom-0 bg-white shadow-md px-1 py-1 fa-question text-grey-l2"
  />
</div>
`;

exports[`IconCheck renders icon checker 2`] = `
<div
  class="relative w-10 h-10 cursor-pointer"
>
  <svg-icon
    class="w-full h-full"
    name="inventory/30"
  />
   
  <span
    class="fa absolute right-0 bottom-0 bg-white shadow-md px-1 py-1 fa-question text-grey-l2"
  />
</div>
`;

exports[`IconCheck renders not clickable icon checker 1`] = `
<div
  class="relative w-10 h-10"
>
  <svg-icon
    class="w-full h-full"
    name="inventory/30"
  />
   
  <span
    class="fa absolute right-0 bottom-0 bg-white shadow-md px-1 py-1 fa-question text-grey-l2"
  />
</div>
`;

exports[`IconCheck renders not clickable icon checker 2`] = `
<div
  class="relative w-10 h-10"
>
  <svg-icon
    class="w-full h-full"
    name="inventory/30"
  />
   
  <span
    class="fa absolute right-0 bottom-0 bg-white shadow-md px-1 py-1 fa-question text-grey-l2"
  />
</div>
`;
